✨ Add recommindation and similar NOTE: working with ml microservice
